--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Jyotirmay Sethi</title>
 </head>
 <body>
-    Redirects to the profile.html page
+<!--     Redirects to the profile.html page -->
 </body>
 </html>
